Pt3D SoA inc 1 — results, validation, heap-dump verdict, pack-source survey
Adds the Increment 1 writeup to PT3D_SOA_MIGRATION.md and the
corresponding JOURNAL entry. Headline of the increment is the heap-dump
verdict from task 1: at 16× CPU on a 31 GB box, the 27.74 GB retained
heap at OOM is 98.5 % necessary state (Mersenne Twister int[] state ~12
GB, MotorBindGrid3D bin int[] ~3 GB, Pt3D A-state 2.3 GB, GPU SoA
float[] 672 MB, Myosin sub-objects 1.78 GB). Shed-able fat is ~430 MB
in over-sized object arrays — 1.5 % of peak.

The audit's framing for inc1 ("retained heap shed at scale" via
end1Pt/end2Pt deletion) would have saved ~1.2 MB at 16× — wrong lever
for this wall. Per discovery-and-bail, the wider end1Pt/end2Pt + bridge
accessor cleanup is deferred (it's a ~70 + ~327 site mechanical refactor
for ~2 MB retained-heap savings at gliding scale; the heap dump says
that's not the bottleneck). The risk-bearing == identity work (the audit's
"step A") is in this increment.

Validation:
- Paired ensemble n=5 t-test: |t| < 0.5 on bindEvents (-0.06),
  meanBoundMotors (-0.20), glidingVelocity (+0.33) — PASS.
- GPU sanity rc=0; identical slotCount + delta counts vs 0b. Host
  wall-time noise on pack (from page-cache + leftover JVM pressure
  during the heap-dump probe; the code that does pack was untouched).
- 16× CPU ceiling re-probe: same OOM as 0a/0b/scalar-Brownian, as
  predicted.

Pack-source survey names Increment 2's conversion targets:
  - Thing.bTransGam / Thing.bRotGam → SoA float[]
    (6 Pt3D-gather reads in packRange + 9 in packJointsRange)
  - MyosinFixed.myFixedPt → SoA float[]

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>